Content, pages and layout sorted

--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -1,1 +1,7 @@
-<p>MacGregor Joinery Services</p>
+<div id="main_text">
+
+<h2>Welcome to MacGregor Joinery Services</h2>
+
+<p class="smallfont">James MacGregor has been a joiner for </p>
+
+</div>
