update to pages

--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -7,8 +7,9 @@
   <p>James MacGregor</p>
   <p>West Calder</p>
   <p>West Lothian</p>
-  <p>01506 872443</p>
-  <p>macgregorjoinery@gmail.com</p>
+  <p class="bold">Mob: 07918 155 847</p>
+  <p class="bold">Home: 01506 872443</p>
+  <a href="mailto:macgregorjoinery@gmail.com">macgregorjoinery@gmail.com</a>
 </div>
 
 
