--- a/app/views/home/gallery.html
+++ b/app/views/home/gallery.html
@@ -1,5 +1,8 @@
 <div id="main_text">
 <h2>The gallery</h2>
 
-<p class="smallfont">Click on the images to see example of work</p>
+<p class="smallfont">Click on the images to see examples of work</p>
 </div>
+
+<img src = "images/garage.JPG"  border="1">
+<img src = "images/decking.JPG" width="450" height="250" border="1">
