--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -1,7 +1,14 @@
 <div id="main_text">
+  <h2>Welcome to MacGregor Joinery Services</h2>
+  <p class="smallfont">James MacGregor is a self employed joiner who has been in the trade for 35 years. He believes there is no substitute for quality work.</p>
+</div>
 
-<h2>Welcome to MacGregor Joinery Services</h2>
-
-<p class="smallfont">James MacGregor has been a joiner for </p>
-
+<div id="list">
+  <p>All joinery work undertaken:</p>
+  <ul>
+    <li>Timber frame construction</li>
+    <li>Garage conversions</li>
+    <li>Attic conversions</li>
+    <li>Renovations</li>
+  <ul>
 </div>
