--- a/app/views/home/gallery.html
+++ b/app/views/home/gallery.html
@@ -4,5 +4,5 @@
 <p class="smallfont">Click on the images to see examples of work</p>
 </div>
 
-<img src = "images/garage.JPG"  border="1">
+<img src = "images/garage.JPG"  width="450" height="250"border="1">
 <img src = "images/decking.JPG" width="450" height="250" border="1">
