Added construction warning

--- a/app/views/home/gallery.html
+++ b/app/views/home/gallery.html
@@ -1,8 +1,8 @@
 <div id="main_text">
 <h2>The gallery</h2>
 
-<p class="smallfont">Click on the images to see examples of work</p>
+<p class="smallfont">The images below show examples of work completed by James</p>
 </div>
 
-<img src = "images/garage.JPG"  width="450" height="250"border="1">
-<img src = "images/decking.JPG" width="450" height="250" border="1">
+<img src = "images/garage.JPG"  width="450" height="250"border="1"><p>Triple garage</p>
+<img src = "images/decking.JPG" width="450" height="250" border="1"><p>Decking</p>
