--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -1,6 +1,6 @@
 <div id="main_text">
   <h2>Welcome to MacGregor Joinery Services</h2>
-  <p class="smallfont">James MacGregor is a self employed joiner who has been in the trade for 35 years. He believes there is no substitute for quality work.</p>
+  <p class="smallfont">James MacGregor is a self employed joiner with over 35 years of joinery experience.</p>
 </div>
 
 <div id="list">
@@ -11,4 +11,8 @@
     <li>Attic conversions</li>
     <li>Renovations</li>
   <ul>
+</div>
+
+<div id="warning">
+<p class="redfont">The website is currently under construction. More content will be added shortly. Visit again soon!</p>
 </div>
